# L_Labs

./: CMakeLists.txt  README.md
cp/: CMakeLists.txt  doc.txt  main.cpp
cp/include/: allocator1.hpp  allocator2.hpp  timer.hpp
cp/src/: allocator1.cpp  allocator2.cpp  timer.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: det.hpp
lab2/src/: det.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: parent.hpp  utils.hpp
lab3/src/: child.cpp  parent.cpp  utils.cpp
lab4/: CMakeLists.txt  main1.cpp  main2.cpp
lab4/include/: lib.h
lab4/src/: lib1.c  lib2.c
lab5/: CMakeLists.txt
lab5/include/: computer_base.hpp  manager_base.hpp  utils.hpp
lab5/src/: computer.cpp  computer_base.cpp  manager.cpp  manager_base.cpp  utils.cpp
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test1.cpp
